--- a/ui/logo/package.json
+++ b/ui/logo/package.json
@@ -4,7 +4,8 @@
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
-    "@ui/icons": "workspace:*"
+    "@ui/icons": "workspace:*",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
