--- a/app/fragments/app-animated-card/package.json
+++ b/app/fragments/app-animated-card/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "18.3.0",
     "react-intl": "6.6.8"
   },
   "dependencies": {
