--- a/app/fragments/app-theme-selector/package.json
+++ b/app/fragments/app-theme-selector/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2"
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "18.3.0",
+    "react-dom": "18.3.1"
   }
 }
