--- a/app/fragments/app-user-badge/package.json
+++ b/app/fragments/app-user-badge/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2"
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "18.3.0"
   },
   "dependencies": {
     "@ui/avatar": "workspace:*",
