--- a/app/fragments/app-users-grid/package.json
+++ b/app/fragments/app-users-grid/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2"
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "18.3.0"
   }
 }
