--- a/app/fragments/app-users-modal/package.json
+++ b/app/fragments/app-users-modal/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@types/react": "^18.3.2",
+    "@types/react-dom": "18.3.0",
     "react-intl": "6.6.8"
   },
   "dependencies": {
