--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/input": "0.1.1",
+    "@atls-ui-parts/layout": "0.1.1",
     "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/image": "workspace:*",
