--- a/app/pages/organizations-page/package.json
+++ b/app/pages/organizations-page/package.json
@@ -2,6 +2,10 @@
   "name": "@pages/organizations-page",
   "version": "0.0.1",
   "main": "src/index.ts",
+  "dependencies": {
+    "@ui/layout": "workspace:*",
+    "@ui/sidebar": "workspace:*"
+  },
   "peerDependencies": {
     "react": "*"
   }
