--- a/app/fragments/app-theme-selector/package.json
+++ b/app/fragments/app-theme-selector/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@app/theme-selector",
   "version": "0.0.1",
-  "type": "module",
   "private": true,
-  "main": "src/index.ts",
+  "type": "module",
   "exports": {
     ".": "./src/index.ts"
   },
+  "main": "src/index.ts",
   "dependencies": {
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
@@ -14,14 +14,16 @@
     "@ui/switch": "workspace:*",
     "@ui/theme": "workspace:*"
   },
-  "peerDependencies": {
-    "@emotion/react": "*",
-    "react": "*"
-  },
   "devDependencies": {
     "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
     "@types/react": "^18.3.2",
     "@types/react-dom": "18.3.0",
     "react-dom": "18.3.1"
+  },
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*"
   }
 }
