--- a/ui/switch/package.json
+++ b/ui/switch/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/layout": "0.1.1",
-    "@atls-ui-parts/switch": "0.1.1"
+    "@atls-ui-parts/switch": "0.1.1",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
