--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/src/index.cjs"
   },
   "devDependencies": {
+    "@app/users-page": "workspace:*",
     "@emotion/react": "11.11.4",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
@@ -22,6 +23,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@app/user-card": "workspace:*",
     "react-intl": "6.6.8"
   }
 }
