--- a/app/pages/users-page/package.json
+++ b/app/pages/users-page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/user-card",
+  "name": "@app/users-page",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -8,29 +8,30 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
-    "@ui/card": "workspace:*",
-    "@ui/checkbox": "workspace:*",
-    "@ui/divider": "workspace:*",
-    "@ui/icons": "workspace:*",
-    "@ui/image": "workspace:*",
+    "@app/theme-selector": "workspace:*",
+    "@app/user-card": "workspace:*",
+    "@app/users-grid": "workspace:*",
+    "@app/users-title": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/progress": "workspace:*",
-    "@ui/scroll": "workspace:*",
-    "@ui/tag": "workspace:*",
-    "@ui/text": "workspace:0.0.1",
+    "@ui/sidebar": "workspace:*",
+    "@ui/text": "workspace:*",
     "@ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@emotion/react": "*",
+    "@emotion/styled": "*",
     "@types/styled-system": "*",
     "react": "*",
+    "react-dom": "*",
     "styled-system": "*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2",
+    "@emotion/styled": "11.11.5",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-system": "5.1.22",
+    "react-intl": "6.6.8",
     "styled-system": "5.1.5"
   }
 }
