--- a/app/fragments/app-users-modal/package.json
+++ b/app/fragments/app-users-modal/package.json
@@ -1,16 +1,25 @@
 {
   "name": "@app/users-modal",
   "version": "0.0.1",
-  "type": "module",
   "private": true,
-  "main": "src/index.ts",
+  "type": "module",
   "exports": {
     ".": "./src/index.ts"
   },
-  "peerDependencies": {
-    "@emotion/react": "*",
-    "react": "*",
-    "react-intl": "*"
+  "main": "src/index.ts",
+  "dependencies": {
+    "@ui/avatar": "workspace:*",
+    "@ui/button": "workspace:*",
+    "@ui/card": "workspace:*",
+    "@ui/divider": "workspace:*",
+    "@ui/dropdown": "workspace:*",
+    "@ui/icons": "workspace:*",
+    "@ui/image": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/modal": "workspace:*",
+    "@ui/scroll": "workspace:*",
+    "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
@@ -18,16 +27,9 @@
     "@types/react-dom": "18.3.0",
     "react-intl": "6.6.8"
   },
-  "dependencies": {
-    "@ui/avatar": "workspace:*",
-    "@ui/button": "workspace:*",
-    "@ui/card": "workspace:*",
-    "@ui/divider": "workspace:*",
-    "@ui/icons": "workspace:*",
-    "@ui/layout": "workspace:*",
-    "@ui/modal": "workspace:*",
-    "@ui/scroll": "workspace:*",
-    "@ui/text": "workspace:0.0.1",
-    "@ui/theme": "workspace:*"
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "react": "*",
+    "react-intl": "*"
   }
 }
