--- a/app/fragments/app-registration/package.json
+++ b/app/fragments/app-registration/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "@app/registration-page",
+  "name": "@app/registration",
   "version": "0.0.1",
   "type": "module",
   "private": true,
   "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
+  },
+  "dependencies": {
+    "@app/main-logo": "workspace:*",
+    "@ui/background": "workspace:*",
+    "@ui/button": "workspace:*",
+    "@ui/icons": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/text": "workspace:*",
+    "@ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@emotion/react": "*",
@@ -17,8 +26,5 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "18.3.0",
     "react-intl": "6.6.8"
-  },
-  "dependencies": {
-    "@app/registration": "workspace:*"
   }
 }
