--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/text": "0.1.3"
+    "@atls-ui-parts/text": "0.1.3",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
