--- a/app/fragments/base-layout/package.json
+++ b/app/fragments/base-layout/package.json
@@ -7,14 +7,19 @@
   "main": "src/index.ts",
   "dependencies": {
     "@app/theme-selector": "workspace:*",
+    "@app/users-title": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/sidebar": "workspace:*"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
     "react": "*",
     "react-dom": "*"
   }
