--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@atls/config-eslint": "0.0.12",
     "@atls/config-jest": "0.0.18",
     "@atls/prettier-plugin": "0.0.8",
+    "@faker-js/faker": "8.4.1",
     "@jest/core": "29.7.0",
     "@types/eslint": "^8.56.10",
     "@types/jest": "29.5.12",
