--- a/app/fragments/dashboard-redirect/package.json
+++ b/app/fragments/dashboard-redirect/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/dashboard-redirect-page",
+  "name": "@app/dashboard-redirect",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -7,9 +7,6 @@
     ".": "./src/index.ts"
   },
   "main": "src/index.ts",
-  "dependencies": {
-    "@app/dashboard-redirect": "workspace:*"
-  },
   "devDependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
