--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,6 +10,8 @@
     "start": "node dist/src/index.cjs"
   },
   "dependencies": {
+    "@apollo/client": "3.10.5",
+    "graphql": "16.8.2",
     "react-intl": "6.6.8"
   },
   "devDependencies": {
@@ -27,5 +29,8 @@
     "react-dom": "18.3.1",
     "react-intl": "6.6.8",
     "typescript": "5.2.2"
+  },
+  "peerDependencies": {
+    "typescript": "*"
   }
 }
