--- a/app/fragments/app-loading/package.json
+++ b/app/fragments/app-loading/package.json
@@ -8,9 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@ui/layout": "workspace:*",
-    "@ui/loading": "workspace:*",
-    "@ui/theme": "workspace:*"
+    "@ui/preloader": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
